Add !!! weak !!! authorization system

--- a/src/main/webapp/loginerror.html
+++ b/src/main/webapp/loginerror.html
@@ -22,7 +22,7 @@ if(response == "authorized"){
 			<img class="login-form__logo" src="assets/homesecurity-logo-transparent.png" alt="HomwSecurity Logo">
 		</div>
 		<div class="login-form__content">
-			<div class="login-form__header">Login to your account</div>
+			<div class="login-form__header" style="color: #ff7782">Login to your account - Incorrect Username/Password</div>
 			<input class="login-form__input" type="text" name="hs_username" placeholder="Username">
 			<input class="login-form__input" type="password" name="hs_password" placeholder="Password">
 			<button class="login-form__button" type="submit">Login</button>
