Add alert bar and additional features

--- a/src/main/webapp/dashboard.html
+++ b/src/main/webapp/dashboard.html
@@ -12,7 +12,7 @@ if(response == "denied"){
 }
 </script>
 
-<title>HomeSecurity Dashboard</title>
+<title>Dashboard</title>
 <meta charset="ISO-8859-1">
 <meta http-equiv="XX-UA-Compatible" content="IE-edge">
 
